syntax = "proto3";

message PlasmaObjectID {
    bytes data = 1;
}
